Implement Api Gateway with authentication using Passport

--- a/LumenApiGateway/composer.json
+++ b/LumenApiGateway/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "dusterio/lumen-passport": "^0.3.5",
+        "guzzlehttp/guzzle": "^7.4",
         "laravel/lumen-framework": "^9.0"
     },
     "require-dev": {
