--- a/LumenApiGateway/.env.example
+++ b/LumenApiGateway/.env.example
@@ -8,12 +8,18 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=homestead
+# DB_USERNAME=homestead
+# DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AUTHORS_SERVICE_BASE_URL=localhost:8000
+BOOKS_SERVICE_BASE_URL=localhost:8001
+
+AUTHORS_SERVICE_SECRET=UPwQfpfiUtPtFK9Z0E6bp0cPb3iDhrbD
+BOOKS_SERVICE_SECRET=TJmm4w2fJjk5pgGXq7xCmjsqODOKDZvR
